@@ -7,7 +7,7 @@ loader_version=0.11.7
 maven_group=dev.the-fireplace
 archives_base_name=Home-Camp
 github_slug=Home-Camp
-mod_version=2.1.0
+mod_version=2.2.0
 release_type=release
 # Dependencies
 fabric_version=0.37.2+1.16
