@@ -20,44 +20,37 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 import the_fireplace.homecamp.domain.config.ConfigValues;
 
 @Mixin(SpawnHelper.class)
-public abstract class SpawnHelperMixin {
-    @Inject(method = "canSpawn",
-            at = @At("HEAD"),
-            cancellable = true)
+public abstract class SpawnHelperMixin
+{
+    @Inject(method = "canSpawn", at = @At("HEAD"), cancellable = true)
     private static void handleCustomSpawnRestriction(
-            ServerWorld world,
-            SpawnGroup group,
-            StructureAccessor pAccessor,
-            ChunkGenerator chunkGenerator,
-            SpawnSettings.SpawnEntry spawnEntry,
-            BlockPos.Mutable blockPos,
-            double squaredDistance,
-            CallbackInfoReturnable<Boolean> cir
-    ){
-        if (SpawnGroup.MONSTER.equals(group)){
-            double monsterX, monsterY, monsterZ = 0;
-            monsterX = blockPos.getX();
-            monsterY = blockPos.getY();
-            monsterZ = blockPos.getZ();
-
+        ServerWorld world,
+        SpawnGroup group,
+        StructureAccessor pAccessor,
+        ChunkGenerator chunkGenerator,
+        SpawnSettings.SpawnEntry spawnEntry,
+        BlockPos.Mutable blockPos,
+        double squaredDistance,
+        CallbackInfoReturnable<Boolean> cir
+    ) {
+        if (SpawnGroup.MONSTER.equals(group)) {
             int radius = DIContainer.get().getInstance(ConfigValues.class).noMobSpawnRegion();
 
             int minX = ChunkSectionPos.getSectionCoord(blockPos.getX() - radius);
             int minZ = ChunkSectionPos.getSectionCoord(blockPos.getZ() - radius);
             int maxX = ChunkSectionPos.getSectionCoord(blockPos.getX() + radius);
             int maxZ = ChunkSectionPos.getSectionCoord(blockPos.getZ() + radius);
-            for (int chunkX = minX; chunkX <= maxX; chunkX++){
-                for (int chunkZ = minZ; chunkZ <= maxZ; chunkZ++){
+            for (int chunkX = minX; chunkX <= maxX; chunkX++) {
+                for (int chunkZ = minZ; chunkZ <= maxZ; chunkZ++) {
                     WorldChunk chunk = world.getChunkManager().getWorldChunk(chunkX, chunkZ, false);
-                    if (chunk != null){
-                        for (BlockPos blockEntity : chunk.getBlockEntityPositions()){
+                    if (chunk != null) {
+                        for (BlockPos blockEntity : chunk.getBlockEntityPositions()) {
                             BlockState blockState = chunk.getBlockState(blockEntity);
-                            if (blockState.getBlock() == Blocks.CAMPFIRE || blockState.getBlock() == Blocks.SOUL_CAMPFIRE){
-                                if (blockState.get(CampfireBlock.LIT)){
-                                    if (blockPos.isWithinDistance(blockEntity, radius)){
+                            if (blockState.getBlock() == Blocks.CAMPFIRE || blockState.getBlock() == Blocks.SOUL_CAMPFIRE) {
+                                if (blockState.get(CampfireBlock.LIT)) {
+                                    if (blockPos.isWithinDistance(blockEntity, radius)) {
                                         cir.setReturnValue(false);
                                         break;
-
                                     }
                                 }
                             }
